debug: setup ceph

--- a/cluster/core/rook-ceph/cluster/secret.sops.yaml
+++ b/cluster/core/rook-ceph/cluster/secret.sops.yaml
@@ -4,13 +4,13 @@ metadata:
     name: rook-ceph-mon
     namespace: rook-ceph
 stringData:
-    admin-secret: ENC[AES256_GCM,data:JSpqzsjEMsX3YZfu9pY8Ut1Z4bv7MFss4FZXyXqO685Iiv4trv8+Ew==,iv:9NWjxQaD7l+lqbN8SNWF657D/v9KNehPmfv+LSMCTC0=,tag:HP7rDjqJpc1Jngr+0dsc/Q==,type:str]
-    ceph-secret: ENC[AES256_GCM,data:Ne3HHEfPCsfjNd1MURSYtuBiuRU3IBktKstGgiWCbvvYzSp6Ll0Dxw==,iv:B126YVkAn2eqD8KiTRStMkIHGEY7Gu12wCxMPiZ0i1w=,tag:YWWYn4wbjGVmC/HFY6Xvyw==,type:str]
-    ceph-username: ENC[AES256_GCM,data:GgqqhtrnmSl7OCWb,iv:+uPt/FbY9C2itbHBmJecAA33B3D+pWAxHdyti/CXeWA=,tag:VKuDDXMXcuchAKLKmc/Zxw==,type:str]
-    cluster-name: ENC[AES256_GCM,data:DhJKEg==,iv:xRaMOIvXkqewvcsEqhbaqz7yN8DmuZXyVHDqv/busRM=,tag:MvW+jaQ4im1O4mi8U+wyfA==,type:str]
+    admin-secret: ENC[AES256_GCM,data:P6R8ObtGf97Gfejg,iv:mA4aDc9wwq0AO8l5XzE+kd6kPPTqhYw1s+Pl97SgveQ=,tag:wQfonNMQnLkcexCbGs7Ojw==,type:str]
+    ceph-secret: ENC[AES256_GCM,data:7J2wPHKDPsg1C2ZzaQ+kXY//gR75CfaxX0gTIyQNwv2Np4jEGSjvvA==,iv:f2qDXIg9VcFaiDsNcMegx93wR3w3EKOEfkExq12jbU8=,tag:oypzBj+hPx0eVj3DYXWOFQ==,type:str]
+    ceph-username: ENC[AES256_GCM,data:sLfj9HIe9bFicJmgZNewuDQkTOM=,iv:mpRp+5tazb9/byUGgyxN5PUJAhaiho4N612Tei4gjXk=,tag:Uq/owI1lPbltSa+gjAUoMA==,type:str]
+    cluster-name: ENC[AES256_GCM,data:1sV7eHL+WcH7,iv:+lyVqBIr/TV0ik4iqptCDyc+nPH5/aGNgVjAQZcMKI8=,tag:gCfNFhkWCf1JyViC9BCMNg==,type:str]
     fsid: ENC[AES256_GCM,data:G0wSwdbQcg4MGfc8tloMDugK8C0uzwy61alIDGCtFQKfDRms,iv:OYI6ccRw8zYc8msybz18MHEUh/b4IJssP7wItprXHXg=,tag:Xd9GcPjrvR+cf82SDnE0fQ==,type:str]
-    mon-secret: ENC[AES256_GCM,data:wVdbnm9ovMuDDEgvzrZk9yc4zT6odnIKSEN9fYBEizLizL968J8VMw==,iv:gjfxYjnOwvV9A4pfTkkQaJv/7lnymgOhESy6fnjY5j4=,tag:TezVdX35DKg2XQBQnYuSVA==,type:str]
-    type: ENC[AES256_GCM,data:BwYTf09lKJQNGZV3M1Umnupm,iv:iuDS0IwzkK2W89gcyMn17VF1GjCwQIBjyLojl1iwSt4=,tag:Z0zKdtdcsm+z/QEpfdaClA==,type:str]
+    mon-secret: ENC[AES256_GCM,data:eUG0mXeqfvjXLw==,iv:Vjs9sPPmmOG9+dmxBxB+S3LTzeGmwVieUSPWOVPBqCg=,tag:mI17whl+oH1L1AcbQ0KEVQ==,type:str]
+type: kubernetes.io/rook
 sops:
     kms: []
     gcp_kms:
@@ -29,8 +29,8 @@ sops:
             eXRIbXhlWXBOWXQvL1NLSmZSa0ZrSHMKAzffi3qcn1791UKVaEwbmplN4WAakpjM
             Dl9OZNZ9+LRFo6MLQtROPmewxFuEwZXIG/MKu/t9+2v+WAM4Xt/mww==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-03-22T02:21:49Z"
-    mac: ENC[AES256_GCM,data:vrN1T+hK6sE0l+Hx5bU6Hlc2BUekVNhDuNW3NNxNHHbYZWp8HUzvUuiASG/9cPl2P55vlDocOB0KOYPsaXlthPtd+n7O+5pH+5SEYXZmDUMp09RIXGok9GbCTe8Fo38EW7mvayqHYBkPCDHD4l/nQMm6cqkHcBgiNrZGArn0yD4=,iv:WvN3KJMXVM1XLukhU9Gx7Yn1PgT4JLI8A42N/43psmI=,tag:uN8OAAY33Xnycevh8bcUkA==,type:str]
+    lastmodified: "2022-03-22T13:48:11Z"
+    mac: ENC[AES256_GCM,data:+pkrgU9N8DUZpsD4fd+F2bgn06ifnHOEqqrLHnuVKiicdoHg4agtzSZHgRLi804PX4JeQ+4O06nCUj5bnvJR6cnyLY1zZ5ce6Ih3GVgDU2r41BBKtwmY1BN2GVubdiR8plVUIAW0k+LO+LpqJPVb3it9IBbakaDKYolyYP45UAc=,iv:6Jj19tW7xKmRl0/K1cy2hDsLh2X2Y1uBkdwSoszXuL4=,tag:nwfzaLY9FCIXs2brznC3Wg==,type:str]
     pgp:
         - created_at: "2022-03-22T02:21:47Z"
           enc: |
@@ -61,7 +61,7 @@ metadata:
     name: rook-csi-rbd-provisioner
     namespace: rook-ceph
 stringData:
-    userID: ENC[AES256_GCM,data:LTCXEPWkRwV9eNB5B/zTMlLlIHKX/UH5GjE=,iv:4E2SnfJ/93QHJ8JAwj68SsugowXo13xFyxVmINmvUE4=,tag:HRt3Tf8ZpX+T08WIY8TDeA==,type:str]
+    userID: ENC[AES256_GCM,data:6F/pTEnwlfJ3PSDhF+rggc1Z1Q==,iv:lhAiQcNW88flKX5AmwZRkjX/Vo4jLQ5VOLBYgSkYErg=,tag:LZ+bZO8cydXQ3bEE88bUZQ==,type:str]
     userKey: ENC[AES256_GCM,data:JtVgEp3AcUrN3n4N3hkJFiST0EC5ogL048OSf5hwzXW+PbJseLYf5g==,iv:I+xBxINAlYBOO/6/7flQNWqPclFM6Xr//q12hu8qE6Q=,tag:1TQJZe/bHXDexZa1ObOHnA==,type:str]
 type: kubernetes.io/rook
 sops:
@@ -82,8 +82,8 @@ sops:
             eXRIbXhlWXBOWXQvL1NLSmZSa0ZrSHMKAzffi3qcn1791UKVaEwbmplN4WAakpjM
             Dl9OZNZ9+LRFo6MLQtROPmewxFuEwZXIG/MKu/t9+2v+WAM4Xt/mww==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-03-22T02:21:49Z"
-    mac: ENC[AES256_GCM,data:vrN1T+hK6sE0l+Hx5bU6Hlc2BUekVNhDuNW3NNxNHHbYZWp8HUzvUuiASG/9cPl2P55vlDocOB0KOYPsaXlthPtd+n7O+5pH+5SEYXZmDUMp09RIXGok9GbCTe8Fo38EW7mvayqHYBkPCDHD4l/nQMm6cqkHcBgiNrZGArn0yD4=,iv:WvN3KJMXVM1XLukhU9Gx7Yn1PgT4JLI8A42N/43psmI=,tag:uN8OAAY33Xnycevh8bcUkA==,type:str]
+    lastmodified: "2022-03-22T13:48:11Z"
+    mac: ENC[AES256_GCM,data:+pkrgU9N8DUZpsD4fd+F2bgn06ifnHOEqqrLHnuVKiicdoHg4agtzSZHgRLi804PX4JeQ+4O06nCUj5bnvJR6cnyLY1zZ5ce6Ih3GVgDU2r41BBKtwmY1BN2GVubdiR8plVUIAW0k+LO+LpqJPVb3it9IBbakaDKYolyYP45UAc=,iv:6Jj19tW7xKmRl0/K1cy2hDsLh2X2Y1uBkdwSoszXuL4=,tag:nwfzaLY9FCIXs2brznC3Wg==,type:str]
     pgp:
         - created_at: "2022-03-22T02:21:47Z"
           enc: |
@@ -114,7 +114,7 @@ metadata:
     name: rook-csi-rbd-node
     namespace: rook-ceph
 stringData:
-    userID: ENC[AES256_GCM,data:aQ4W2Wow/AseXCglrDnWCRSawQ==,iv:YdxACQ90wVEYmANAIWRHquZbmU29RhEB+WDPN3W9teE=,tag:Qsf+a9PD2F1qtnx4pbauMQ==,type:str]
+    userID: ENC[AES256_GCM,data:WrTy1xw7a8o+ofx/,iv:VKwAz+wZ0LG7E1X3D3E7nHD1gvpACnyyuBhP76iRpnQ=,tag:LFkv5w6Nz/oBp/wtmzA5Gg==,type:str]
     userKey: ENC[AES256_GCM,data:vbu95T65ZOHZBElD2LKobTvYtdE7l6JiQ4u6OGAunGzp5wp4Gaq4eg==,iv:ufzlFkIABKPtL8/fAlq6narUUCL8HTUfUwzJj7cd/iA=,tag:Pz3n6mzrTGcuebd3ifVDcg==,type:str]
 type: kubernetes.io/rook
 sops:
@@ -135,8 +135,8 @@ sops:
             eXRIbXhlWXBOWXQvL1NLSmZSa0ZrSHMKAzffi3qcn1791UKVaEwbmplN4WAakpjM
             Dl9OZNZ9+LRFo6MLQtROPmewxFuEwZXIG/MKu/t9+2v+WAM4Xt/mww==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-03-22T02:21:49Z"
-    mac: ENC[AES256_GCM,data:vrN1T+hK6sE0l+Hx5bU6Hlc2BUekVNhDuNW3NNxNHHbYZWp8HUzvUuiASG/9cPl2P55vlDocOB0KOYPsaXlthPtd+n7O+5pH+5SEYXZmDUMp09RIXGok9GbCTe8Fo38EW7mvayqHYBkPCDHD4l/nQMm6cqkHcBgiNrZGArn0yD4=,iv:WvN3KJMXVM1XLukhU9Gx7Yn1PgT4JLI8A42N/43psmI=,tag:uN8OAAY33Xnycevh8bcUkA==,type:str]
+    lastmodified: "2022-03-22T13:48:11Z"
+    mac: ENC[AES256_GCM,data:+pkrgU9N8DUZpsD4fd+F2bgn06ifnHOEqqrLHnuVKiicdoHg4agtzSZHgRLi804PX4JeQ+4O06nCUj5bnvJR6cnyLY1zZ5ce6Ih3GVgDU2r41BBKtwmY1BN2GVubdiR8plVUIAW0k+LO+LpqJPVb3it9IBbakaDKYolyYP45UAc=,iv:6Jj19tW7xKmRl0/K1cy2hDsLh2X2Y1uBkdwSoszXuL4=,tag:nwfzaLY9FCIXs2brznC3Wg==,type:str]
     pgp:
         - created_at: "2022-03-22T02:21:47Z"
           enc: |
@@ -167,7 +167,7 @@ metadata:
     name: rook-csi-cephfs-provisioner
     namespace: rook-ceph
 stringData:
-    adminID: ENC[AES256_GCM,data:fY5Cj7xv+zOvVSBSSnMWOwqXhBD67VPPmg1pWlk=,iv:hHxIQUb2gSH38sPzBckEeJWhLzKkIw8qcuUmgC/oalY=,tag:r9NvfqzWP1X03EH73fTypg==,type:str]
+    adminID: ENC[AES256_GCM,data:FWCuCImUNvE56B61NaFwV7bD/MdaIw==,iv:yYfn1TBQpYfm9EJIjE7jaAvcnQuf2/kH3ZcikWWY6vA=,tag:Aj9y8gA4wUv9c9pnyoRvMA==,type:str]
     adminKey: ENC[AES256_GCM,data:L65xlgNbtAL8RPFm1dtbSVVLO23phyw+wIQU/pM+uNTYsdpQtbmZ6w==,iv:b7TvdMCJYDmxeCmDh6AGjgZbhr7JLDTYEgDyJ6KHXRg=,tag:KtrZfo64ztWGYo14qb/ccA==,type:str]
 type: kubernetes.io/rook
 sops:
@@ -188,8 +188,8 @@ sops:
             eXRIbXhlWXBOWXQvL1NLSmZSa0ZrSHMKAzffi3qcn1791UKVaEwbmplN4WAakpjM
             Dl9OZNZ9+LRFo6MLQtROPmewxFuEwZXIG/MKu/t9+2v+WAM4Xt/mww==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-03-22T02:21:49Z"
-    mac: ENC[AES256_GCM,data:vrN1T+hK6sE0l+Hx5bU6Hlc2BUekVNhDuNW3NNxNHHbYZWp8HUzvUuiASG/9cPl2P55vlDocOB0KOYPsaXlthPtd+n7O+5pH+5SEYXZmDUMp09RIXGok9GbCTe8Fo38EW7mvayqHYBkPCDHD4l/nQMm6cqkHcBgiNrZGArn0yD4=,iv:WvN3KJMXVM1XLukhU9Gx7Yn1PgT4JLI8A42N/43psmI=,tag:uN8OAAY33Xnycevh8bcUkA==,type:str]
+    lastmodified: "2022-03-22T13:48:11Z"
+    mac: ENC[AES256_GCM,data:+pkrgU9N8DUZpsD4fd+F2bgn06ifnHOEqqrLHnuVKiicdoHg4agtzSZHgRLi804PX4JeQ+4O06nCUj5bnvJR6cnyLY1zZ5ce6Ih3GVgDU2r41BBKtwmY1BN2GVubdiR8plVUIAW0k+LO+LpqJPVb3it9IBbakaDKYolyYP45UAc=,iv:6Jj19tW7xKmRl0/K1cy2hDsLh2X2Y1uBkdwSoszXuL4=,tag:nwfzaLY9FCIXs2brznC3Wg==,type:str]
     pgp:
         - created_at: "2022-03-22T02:21:47Z"
           enc: |
@@ -220,19 +220,9 @@ metadata:
     name: rook-csi-cephfs-node
     namespace: rook-ceph
 stringData:
-    adminID: ENC[AES256_GCM,data:KCQ9cXG3hfo61e63fv+UNsCY3ZEjDA==,iv:1CgePKHdw56VUCLZjuYzxrtOBxKm800x84GboB7Uyf0=,tag:T9Onx0aaYgNb1boV4RkzhA==,type:str]
+    adminID: ENC[AES256_GCM,data:Q6MAgQR/g+Ejq0Y4LDGu,iv:hYyggGjNbEgdg9xklasVc/R1Rh8TXTYXZk8bexs3c0Q=,tag:h4rVWw5yY/aUJxd2fMqfsw==,type:str]
     adminKey: ENC[AES256_GCM,data:hovC2FFNuOcd8PO/rUtvfFOXOwkmvsEJsP9ssTTXKm4xOjeWkw1f8g==,iv:A/bC+NiZpoyZcZ43aZptjkoZ3M1pUG7HeqM2Z5OzIFQ=,tag:ImF7qejyXon80HYKsecEIw==,type:str]
 type: kubernetes.io/rook
-# ---
-# apiVersion: v1
-# kind: Secret
-# metadata:
-#   name: rgw-admin-ops-user
-#   namespace: rook-ceph
-# stringData:
-#   accessKey:
-#   secretKey:
-# type: kubernetes.io/rook
 sops:
     kms: []
     gcp_kms:
@@ -251,8 +241,61 @@ sops:
             eXRIbXhlWXBOWXQvL1NLSmZSa0ZrSHMKAzffi3qcn1791UKVaEwbmplN4WAakpjM
             Dl9OZNZ9+LRFo6MLQtROPmewxFuEwZXIG/MKu/t9+2v+WAM4Xt/mww==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-03-22T02:21:49Z"
-    mac: ENC[AES256_GCM,data:vrN1T+hK6sE0l+Hx5bU6Hlc2BUekVNhDuNW3NNxNHHbYZWp8HUzvUuiASG/9cPl2P55vlDocOB0KOYPsaXlthPtd+n7O+5pH+5SEYXZmDUMp09RIXGok9GbCTe8Fo38EW7mvayqHYBkPCDHD4l/nQMm6cqkHcBgiNrZGArn0yD4=,iv:WvN3KJMXVM1XLukhU9Gx7Yn1PgT4JLI8A42N/43psmI=,tag:uN8OAAY33Xnycevh8bcUkA==,type:str]
+    lastmodified: "2022-03-22T13:48:11Z"
+    mac: ENC[AES256_GCM,data:+pkrgU9N8DUZpsD4fd+F2bgn06ifnHOEqqrLHnuVKiicdoHg4agtzSZHgRLi804PX4JeQ+4O06nCUj5bnvJR6cnyLY1zZ5ce6Ih3GVgDU2r41BBKtwmY1BN2GVubdiR8plVUIAW0k+LO+LpqJPVb3it9IBbakaDKYolyYP45UAc=,iv:6Jj19tW7xKmRl0/K1cy2hDsLh2X2Y1uBkdwSoszXuL4=,tag:nwfzaLY9FCIXs2brznC3Wg==,type:str]
+    pgp:
+        - created_at: "2022-03-22T02:21:47Z"
+          enc: |
+            -----BEGIN PGP MESSAGE-----
+
+            hQIMAyQ1SH08BnVLAQ/+JaRs6wrEMNl0pPz4vGvgFR4qe7uO7/FUAOS2NLAuBQnt
+            7uBy6OG+LWL6mrACTHfF6Rt6ugpzTg0MOMOvQRW92UcvU41NdkvVJQB4skHJzoFi
+            nW2Fko3y0DbfB/3xq+vOveUrMdmxMS7S3+R/lQ2/bAipFqON5KtKBN0cRtqtdjVw
+            vxmGpMDeal5w5gEFobYp1m7W2zIzrWj3CG5Q20bmGSjq9GKCx0uFBTD+wmNfaPyN
+            Et8T14GRKaljLqRUqv9D2DFRZ9khC2HHdpLGhn2gI+Qibuvq64GgTpTC996DWYyf
+            azd4xHfUfZW2O7x7eMWBZauC25oxoNK3xJ8/+QY+0ELSS3S+UlgWEhDaqtQBLxTw
+            O4pomW3mQDxHiK5yYoGAQUf5P0ajE0M+vlokHvlJb9B89Mh51BHlybLCqMF+p+3N
+            4zJsQ5CYGZZvcSuaaGYfPFr5TLL457DCPu5CpcgsvnCBfqmWxoTlr15RsB689Hl7
+            2cmtTb8OVn26Y9LUfeAozb9qGHgIQEzJh3d9/52BgnhZpzfsZI831mkkF64ZDiv0
+            cpe3JQHxgFYbaAUXa+8EPhQHSc4rFD1EY60c2UdbN6Lyzivzz+whkjDlQ2zNHahP
+            kwoeQePKuAPl7pgptb6YAVqFL7Nyb8DPdEePDgA7JwySJm/qAgXt8pheN+1H1efS
+            XgHMS8t0DM7HYFI7G4NLO12qXa8yOi140eCwQebFI0HNvkZyihKOO8UwuROHD887
+            WEo5qda2NoemzotDKDxNqV0pvDInlZhL3nuGr5KdBBkDlGFM8CA+HqHeWHs18GE=
+            =LiLM
+            -----END PGP MESSAGE-----
+          fp: B3BB654B6CAAA312F49C37DF9CEFDEA122154047
+    encrypted_regex: ^(data|stringData)$
+    version: 3.7.2
+---
+apiVersion: v1
+kind: Secret
+metadata:
+    name: rgw-admin-ops-user
+    namespace: rook-ceph
+stringData:
+    accessKey: ENC[AES256_GCM,data:l2Wr8qY0cMwH0NzJfJ7fA5s3wN8=,iv:+VHXVStsadZ/z9m/affoC6uHZmZPpHemrHiKmIshzbQ=,tag:3Cslniixu/IFHR+n427xGw==,type:str]
+    secretKey: ENC[AES256_GCM,data:UUrT0GD7+6VYcx4GWyWvsentyiT3b+Z/xcPmWUnVI6wEmIHbRtD1ig==,iv:Qr2RcM9YAOmyv8hOwCN5ghdysapUYIJZ2h4vk1xk5Fg=,tag:jeq9gziPPKClfpEOZyn1OA==,type:str]
+type: kubernetes.io/rook
+sops:
+    kms: []
+    gcp_kms:
+        - resource_id: projects/selfhosted-207922/locations/global/keyRings/sops/cryptoKeys/sops-key
+          created_at: "2022-03-22T02:21:47Z"
+          enc: CiQA1r6bIDKHlo8e+lfNDKquTs2t2QTFnpOkDHpk8IsxCUQMbtkSSQCbI6ie6gqvJDNmuCx1xgZHBDHhU/cdJPhb6arQYt6XC1i2u/jBWwtWQDkW5YAnJ8LRmtDYJHC1BVU0mmTcIO5yQH+6pXkkP/g=
+    azure_kv: []
+    hc_vault: []
+    age:
+        - recipient: age1ms2d7n4yhaq0mdap4cfyaq2xtfutlachqapkjfr0z2qr7ghc2ckq000jhm
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBrazFKSWVBQUNRbC9WLzVp
+            dTllUzJOdlRZVmcwaFJCU2Y4N0lYdHQzMVFjCnM4SXFGSGsxeXRpNHh6VExCZWY2
+            Mmt1QWVXM201YjBhcWRsMEN5ZzFpN2MKLS0tIDVDSmwyelphWThkc2k0SGdhVHls
+            eXRIbXhlWXBOWXQvL1NLSmZSa0ZrSHMKAzffi3qcn1791UKVaEwbmplN4WAakpjM
+            Dl9OZNZ9+LRFo6MLQtROPmewxFuEwZXIG/MKu/t9+2v+WAM4Xt/mww==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2022-03-22T13:48:11Z"
+    mac: ENC[AES256_GCM,data:+pkrgU9N8DUZpsD4fd+F2bgn06ifnHOEqqrLHnuVKiicdoHg4agtzSZHgRLi804PX4JeQ+4O06nCUj5bnvJR6cnyLY1zZ5ce6Ih3GVgDU2r41BBKtwmY1BN2GVubdiR8plVUIAW0k+LO+LpqJPVb3it9IBbakaDKYolyYP45UAc=,iv:6Jj19tW7xKmRl0/K1cy2hDsLh2X2Y1uBkdwSoszXuL4=,tag:nwfzaLY9FCIXs2brznC3Wg==,type:str]
     pgp:
         - created_at: "2022-03-22T02:21:47Z"
           enc: |
