feat: add notifications and webhooks

--- a/cluster/apps/kustomization.yaml
+++ b/cluster/apps/kustomization.yaml
@@ -5,7 +5,7 @@ resources:
   - calico-system
   - cert-manager
   # - default
-  # - flux-system
+  - flux-system
   # - home
   # - kasten-io
   # - kube-system
