feat: add ingresses and other networking tools

--- a/cluster/apps/kustomization.yaml
+++ b/cluster/apps/kustomization.yaml
@@ -11,6 +11,6 @@ resources:
   # - kube-system
   # - media
   # - monitoring
-  # - networking
+  - networking
   # - rook-ceph
   - system-upgrade
