--- a/cluster/apps/monitoring/kustomization.yaml
+++ b/cluster/apps/monitoring/kustomization.yaml
@@ -4,7 +4,7 @@ kind: Kustomization
 resources:
   - blackbox-exporter
   # - gotify
-  # - grafana
+  - grafana
   # - karma
   # - kube-prometheus-stack
   # - loki
