--- a/cluster/core/rook-ceph/cluster/cluster-external.yaml
+++ b/cluster/core/rook-ceph/cluster/cluster-external.yaml
@@ -8,12 +8,12 @@ spec:
     enable: true
   crashCollector:
     disable: true
-  monitoring:
-    enabled: true
-    rulesNamespace: rook-ceph
-    externalMgrEndpoints:
-      - ip: "10.1.5.201"
-      - ip: "10.1.5.202"
-      - ip: "10.1.5.203"
-      - ip: "10.1.5.204"
-    externalMgrPrometheusPort: 9283
+  # monitoring:
+  #   enabled: true
+  #   rulesNamespace: rook-ceph
+  #   externalMgrEndpoints:
+  #     - ip: "10.1.5.201"
+  #     - ip: "10.1.5.202"
+  #     - ip: "10.1.5.203"
+  #     - ip: "10.1.5.204"
+  #   externalMgrPrometheusPort: 9283
