debug: remove external cluster

--- a/cluster/core/rook-ceph/cluster/kustomization.yaml
+++ b/cluster/core/rook-ceph/cluster/kustomization.yaml
@@ -5,5 +5,5 @@ resources:
   - secret.sops.yaml
   - configmap.sops.yaml
   - helm-release.yaml
-  - cluster-external.yaml
+  # - cluster-external.yaml
   - storage-class.yaml
