--- a/cluster/core/rook-ceph/helm-release.yaml
+++ b/cluster/core/rook-ceph/helm-release.yaml
@@ -8,32 +8,20 @@ spec:
   interval: 5m
   chart:
     spec:
+      # renovate: registryUrl=https://charts.rook.io/release
       chart: rook-ceph
-      version: v1.8.7
+      version: v1.7.4
       sourceRef:
         kind: HelmRepository
         name: rook-ceph-charts
         namespace: flux-system
-  install:
-    createNamespace: true
-    crds: CreateReplace
-    remediation:
-      retries: 3
-  upgrade:
-    crds: CreateReplace
-    remediation:
-      retries: 3
-  dependsOn:
-    - name: cert-manager
-      namespace: cert-manager
   values:
     crds:
-      enabled: true
+      enabled: false
     csi:
-      enableCephfsDriver: false
-      enableCephfsSnapshotter: false
-    monitoring:
-      enabled: true
+      kubeletDirPath: /var/lib/kubelet
+      pluginTolerations:
+        - operator: "Exists"
     resources:
       requests:
         cpu: 100m
