--- a/cluster/core/rook-ceph/snapshot-controller/kustomization.yaml
+++ b/cluster/core/rook-ceph/snapshot-controller/kustomization.yaml
@@ -3,7 +3,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - rbac.yaml
-  - helm-release.yaml
-  - storage
-  - rook-direct-mount
-  - snapshot-controller
+  - statefulset.yaml
