--- a/cluster/core/rook-ceph/helm-release.yaml
+++ b/cluster/core/rook-ceph/helm-release.yaml
@@ -10,14 +10,15 @@ spec:
     spec:
       # renovate: registryUrl=https://charts.rook.io/release
       chart: rook-ceph
-      version: v1.7.4
+      version: v1.8.7
       sourceRef:
         kind: HelmRepository
         name: rook-ceph-charts
         namespace: flux-system
+  timeout: 30m
   values:
     crds:
-      enabled: false
+      enabled: true
     csi:
       kubeletDirPath: /var/lib/kubelet
       pluginTolerations:
