--- a/cluster/core/rook-ceph/kustomization.yaml
+++ b/cluster/core/rook-ceph/kustomization.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
@@ -6,4 +5,6 @@ resources:
   - helm-release.yaml
   - storage
   - rook-direct-mount
+  - service-monitors
   - snapshot-controller
+  - dashboard
