--- a/cluster/core/rook-ceph/rbac.yaml
+++ b/cluster/core/rook-ceph/rbac.yaml
@@ -2,7 +2,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: 'rook-ceph-system-psp-user'
+  name: rook-ceph-system-psp-user
   labels:
     operator: rook
     storage-backend: ceph
