--- a/cluster/core/rook-ceph/rook-direct-mount/deployment.yaml
+++ b/cluster/core/rook-ceph/rook-direct-mount/deployment.yaml
@@ -1,8 +1,9 @@
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: rook-direct-mount
-  namespace: rook-ceph # namespace:cluster
+  namespace: rook-ceph
   labels:
     app: rook-direct-mount
 spec:
@@ -18,11 +19,10 @@ spec:
       dnsPolicy: ClusterFirstWithHostNet
       containers:
         - name: rook-direct-mount
-          image: rook/ceph:master
-          command: ["/bin/bash"]
-          args: ["-m", "-c", "/usr/local/bin/toolbox.sh"]
+          image: rook/ceph:v1.8.7
+          command: ["/tini"]
+          args: ["-g", "--", "/usr/local/bin/toolbox.sh"]
           imagePullPolicy: IfNotPresent
-          tty: true
           env:
             - name: ROOK_CEPH_USERNAME
               valueFrom:
@@ -36,7 +36,6 @@ spec:
                   key: ceph-secret
           securityContext:
             privileged: true
-            runAsUser: 0
           volumeMounts:
             - mountPath: /dev
               name: dev
