--- a/cluster/core/rook-ceph/snapshot-controller/rbac.yaml
+++ b/cluster/core/rook-ceph/snapshot-controller/rbac.yaml
@@ -44,9 +44,9 @@ subjects:
     name: snapshot-controller
     namespace: rook-ceph
 roleRef:
-  - kind: ClusterRole
-    name: snapshot-controller-runner
-    apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: snapshot-controller-runner
+  apiGroup: rbac.authorization.k8s.io
 ---
 kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
