--- a/cluster/core/rook-ceph/storage/cluster-external.yaml
+++ b/cluster/core/rook-ceph/storage/cluster-external.yaml
@@ -3,13 +3,10 @@ apiVersion: ceph.rook.io/v1
 kind: CephCluster
 metadata:
   name: rook-ceph
-  namespace: rook-ceph
+  namespace: rook-ceph # namespace:cluster
 spec:
   external:
     enable: true
-  dataDirHostPath: /var/lib/rook
-  cephVersion:
-    image: quay.io/ceph/ceph:v16.2.6
   crashCollector:
     disable: true
   healthCheck:
@@ -17,6 +14,7 @@ spec:
       mon:
         disabled: false
         interval: 45s
+  # optionally, the ceph-mgr IP address can be passed to gather metric from the prometheus exporter
   monitoring:
     enabled: true
     rulesNamespace: rook-ceph
