--- a/cluster/core/rook-ceph/storage/kustomization.yaml
+++ b/cluster/core/rook-ceph/storage/kustomization.yaml
@@ -1,9 +1,11 @@
----
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - secret.sops.yaml
   - configmap.sops.yaml
-  - ceph-cluster.yaml
+  - cluster-external.yaml
+  - ceph-block-pool.yaml
+  - ceph-file-system.yaml
+  - ceph-object.yaml
   - storage-class.yaml
   - volume-snapshot-class.yaml
