--- a/cluster/core/rook-ceph/storage/volume-snapshot-class.yaml
+++ b/cluster/core/rook-ceph/storage/volume-snapshot-class.yaml
@@ -1,10 +1,11 @@
 ---
-apiVersion: snapshot.storage.k8s.io/v1beta1
+apiVersion: snapshot.storage.k8s.io/v1
 kind: VolumeSnapshotClass
 metadata:
   name: csi-rbdplugin-snapclass
   annotations:
     k10.kasten.io/is-snapshot-class: "true"
+    velero.io/csi-volumesnapshot-class: "true"
 driver: rook-ceph.rbd.csi.ceph.com
 parameters:
   clusterID: rook-ceph
@@ -12,12 +13,13 @@ parameters:
   csi.storage.k8s.io/snapshotter-secret-namespace: rook-ceph
 deletionPolicy: Delete
 ---
-apiVersion: snapshot.storage.k8s.io/v1beta1
+apiVersion: snapshot.storage.k8s.io/v1
 kind: VolumeSnapshotClass
 metadata:
   name: csi-cephfsplugin-snapclass
   annotations:
     k10.kasten.io/is-snapshot-class: "true"
+    velero.io/csi-volumesnapshot-class: "true"
 driver: rook-ceph.cephfs.csi.ceph.com
 parameters:
   clusterID: rook-ceph
