--- a/cluster/core/rook-ceph/storage/kustomization.yaml
+++ b/cluster/core/rook-ceph/storage/kustomization.yaml
@@ -6,6 +6,6 @@ resources:
   - cluster-external.yaml
   - ceph-block-pool.yaml
   - ceph-file-system.yaml
-  - ceph-object.yaml
+  # - ceph-object.yaml
   - storage-class.yaml
   - volume-snapshot-class.yaml
