--- a/cluster/core/rook-ceph/storage/kustomization.yaml
+++ b/cluster/core/rook-ceph/storage/kustomization.yaml
@@ -1,8 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - secret.sops.yaml
-  - configmap.sops.yaml
+  # - secret.sops.yaml
+  # - configmap.sops.yaml
   - cluster-external.yaml
   - ceph-block-pool.yaml
   - ceph-file-system.yaml
