--- a/cluster/crds/rook-ceph/crds.yaml
+++ b/cluster/crds/rook-ceph/crds.yaml
@@ -15,6 +15,7 @@ spec:
     /*
     # include deploy crds dir
     !/deploy/examples/crds.yaml
+    !/deploy/examples/common.yaml
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
