--- a/cluster/core/rook-ceph/cluster/helm-release.yaml
+++ b/cluster/core/rook-ceph/cluster/helm-release.yaml
@@ -38,12 +38,25 @@ spec:
           - hosts:
               - *host
     cephClusterSpec:
-      external: true
-    cephBlockPoolsVolumeSnapshotClass:
-      enabled: true
-      name: csi-rbdplugin-snapclass
-      annotations:
-        k10.kasten.io/is-snapshot-class: "true"
+      external:
+        enable: true
+      crashCollector:
+        disable: true
+      healthCheck:
+        daemonHealth:
+          mon:
+            disabled: false
+            interval: 45s
+      # optionally, the ceph-mgr IP address can be passed to gather metric from the prometheus exporter
+      monitoring:
+        enabled: true
+        rulesNamespace: rook-ceph
+        externalMgrEndpoints:
+          - ip: "10.1.5.201"
+          - ip: "10.1.5.202"
+          - ip: "10.1.5.203"
+          - ip: "10.1.5.204"
+        externalMgrPrometheusPort: 9283
     cephBlockPools: []
     cephFileSystems: []
     cephObjectStores: []
