debug: rook troubleshooting

--- a/cluster/core/rook-ceph/cluster/kustomization.yaml
+++ b/cluster/core/rook-ceph/cluster/kustomization.yaml
@@ -6,3 +6,5 @@ resources:
   - secret.sops.yaml
   - helm-release.yaml
   - cluster-external.yaml
+  - storageclass.yaml
+  - volume-snapshot-class.yaml
