--- a/cluster/apps/monitoring/kustomization.yaml
+++ b/cluster/apps/monitoring/kustomization.yaml
@@ -5,7 +5,7 @@ resources:
   - blackbox-exporter
   # - gotify
   - grafana
-  # - karma
+  - karma
   # - kube-prometheus-stack
   # - loki
   # - node-problem-detector
