feat: add prometheus

--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -5,7 +5,7 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_ALERT_MANAGER_DISCORD_WEBHOOK: ENC[AES256_GCM,data:iXybMg==,iv:zdl1NlI14sBd1E5DyINrTodLVdhXLyhjxewer9hoz0Y=,tag:jMeMd1pYMiFf7x/Qixh1sg==,type:str]
+    SECRET_ALERT_MANAGER_DISCORD_WEBHOOK: ENC[AES256_GCM,data:XK5ftbFhzfsDX+mosCqug/hba14AemBxPW47ZW3b8zfmjOQRsqkD/I4JoJnmq1b5/svz/bcPBC55EhbTywHRPMgCZDHcCLOSai7LDCXs1HwKZeQaQnGau33ROfbvvaNosdQ6bNCcvt3VLYdf52of0PX61ahwEnik,iv:Aza6sD45yMgB04t5lJtBv/7JRbq/jCTwsPmYLKq8CaU=,tag:JV6fIqGzDp2pp7hMv6PvJg==,type:str]
     SECRET_PUBLIC_DOMAIN: ENC[AES256_GCM,data:0w7RSIUxgEP7EVUwwg==,iv:lkWW74lKYUsfPBDMvclms4Y6t/rx2emH9DfurI5cxYs=,tag:Xtn99Ds9Iz9pmrGJTw/sWA==,type:str]
     SECRET_PRIVATE_DOMAIN: ENC[AES256_GCM,data:N3AIRKMc3m+vbo1QR+1noP0=,iv:FvhnK4I6HUVyx/eNCt6YE0e8abi1JYEpsellEmvS39c=,tag:63AxFbPl+JthkfhdE1SG8Q==,type:str]
     SECRET_EMAIL: ENC[AES256_GCM,data:YJ0ywFiWLA6eFwOIbVCKnJdXohh6vhwxkw==,iv:K592a2alZbFrDwwid+mhNWGcOEGIM1xzJtceBx0RTP8=,tag:nZbZJxxI3WHfPg3jyc2a1w==,type:str]
@@ -31,8 +31,8 @@ sops:
             bEthME45cnI4MGdEZ2VYRlk3aU1qdjgKUnHIHQSP3gi1jJK9bnKrXzc97dsDtisN
             HgRS5n9Eau1vrjuqsQd49Fypgys2zXpYsd+60kkxv/VTKZm9tWjkKA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-03-21T15:38:10Z"
-    mac: ENC[AES256_GCM,data:DeUSHQHm+BsQ0/ItCSCAzyIBdT/DEEzbTSgNcznQzoEW9s7Df9YJ3+YfrXI9A6BYMl1y8XN99JG5dM7o26/JXlZRxgekjQYCT6lfcoPHGiXa7S7FLov4Agx1WOd8D33LPI/94no1sVMwfCZCDo+OzK1p6NGG74Z7eeQNKthOmNs=,iv:xwII8Upf2DEsW9k4nu0leJoaqW3yKPeGYTD6r+5MuJE=,tag:mzwMX4lAONsu6fIb9SxQ7A==,type:str]
+    lastmodified: "2022-03-24T17:37:30Z"
+    mac: ENC[AES256_GCM,data:UGmoo4MEmGak20P+oFw5ppm+/+Ek7/9Cle3jw+UNUBPejItIH0rg1WQAW6Hq6tFkZ++RbiONqapdnY2REmGgYEJzA98w9TuloYS1/is7AWhfiRHadN1hFasn95GYF3lhrhh7o01Ixty42+k1X9r21rf6wwu8ZRJwvMNsgbZiCbA=,iv:hTQJmTbowi3o9rWwHvwmDvho2d7OvoW8/mzWYEr4Fb4=,tag:g0GAlUc8+681+jPgUoNtjA==,type:str]
     pgp:
         - created_at: "2022-03-21T15:38:08Z"
           enc: |
