--- a/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
+++ b/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
@@ -70,10 +70,10 @@ spec:
               match_re:
                 severity: critical
               continue: true
-            - receiver: "nodered"
-              match:
-                alertname: UPSOnBattery
-              continue: true
+            # - receiver: "nodered"
+            #   match:
+            #     alertname: UPSOnBattery
+            #   continue: true
         inhibit_rules:
           - source_match:
               severity: "critical"
@@ -129,12 +129,12 @@ spec:
             targetLabel: instance
     kubeApiServer:
       enabled: true
-    kubeControllerManager:
-      enabled: true
-      endpoints:
-        - 10.1.101.100
-        - 10.1.101.101
-        - 10.1.101.102
+    # kubeControllerManager:
+    #   enabled: true
+    #   endpoints:
+    #     - 10.1.101.100
+    #     - 10.1.101.101
+    #     - 10.1.101.102
     kubeScheduler:
       enabled: true
       endpoints:
