--- a/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
+++ b/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
@@ -135,6 +135,14 @@ spec:
         - 10.1.101.100
         - 10.1.101.101
         - 10.1.101.102
+      service:
+        enabled: true
+        port: 10257
+        targetPort: 10257
+      serviceMonitor:
+        enabled: true
+        https: true
+        insecureSkipVerify: true
     kubeScheduler:
       enabled: true
       endpoints:
@@ -155,8 +163,8 @@ spec:
         - 10.1.101.102
       service:
         enabled: true
-        # port: 2381
-        # targetPort: 2381
+        port: 2381
+        targetPort: 2381
     prometheusOperator:
       prometheusConfigReloader:
         resources:
