--- a/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
+++ b/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
@@ -131,10 +131,10 @@ spec:
       enabled: true
     kubeControllerManager:
       enabled: true
-      endpoints:
-        - 10.1.101.100
-        - 10.1.101.101
-        - 10.1.101.102
+      endpoints: []
+        # - 10.1.101.100
+        # - 10.1.101.101
+        # - 10.1.101.102
     kubeScheduler:
       enabled: true
       endpoints:
