--- a/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
+++ b/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
@@ -131,6 +131,14 @@ spec:
       enabled: true
     kubeControllerManager:
       enabled: true
+      service:
+        enabled: true
+        port: 10257
+        targetPort: 10257
+      serviceMonitor:
+        enabled: true
+        https: true
+        insecureSkipVerify: true
       endpoints:
         - 10.1.101.100
         - 10.1.101.101
