feat: add uptimerobot heartbeat

--- a/cluster/apps/monitoring/kustomization.yaml
+++ b/cluster/apps/monitoring/kustomization.yaml
@@ -12,5 +12,5 @@ resources:
   # - snmp-exporter
   # - thanos
   # - unifi-poller
-  # - uptimerobot-heartbeat
+  - uptimerobot-heartbeat
   # - vector
