--- a/cluster/apps/monitoring/kustomization.yaml
+++ b/cluster/apps/monitoring/kustomization.yaml
@@ -3,13 +3,12 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - blackbox-exporter
-  # - gotify
+  - gotify
   - grafana
   - karma
   - kube-prometheus-stack
   # - loki
   - node-problem-detector
-  # - snmp-exporter
   # - thanos
   # - unifi-poller
   - uptimerobot-heartbeat
