feat: enable unifi-poller and prometheus

--- a/cluster/apps/monitoring/kustomization.yaml
+++ b/cluster/apps/monitoring/kustomization.yaml
@@ -6,10 +6,10 @@ resources:
   - gotify
   - grafana
   - karma
-  # - kube-prometheus-stack
+  - kube-prometheus-stack
   # - loki
   - node-problem-detector
   # - thanos
-  # - unifi-poller
+  - unifi-poller
   - uptimerobot-heartbeat
   # - vector
