--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -6,13 +6,16 @@ metadata:
     namespace: flux-system
 stringData:
     SECRET_ALERT_MANAGER_DISCORD_WEBHOOK: ENC[AES256_GCM,data:XK5ftbFhzfsDX+mosCqug/hba14AemBxPW47ZW3b8zfmjOQRsqkD/I4JoJnmq1b5/svz/bcPBC55EhbTywHRPMgCZDHcCLOSai7LDCXs1HwKZeQaQnGau33ROfbvvaNosdQ6bNCcvt3VLYdf52of0PX61ahwEnik,iv:Aza6sD45yMgB04t5lJtBv/7JRbq/jCTwsPmYLKq8CaU=,tag:JV6fIqGzDp2pp7hMv6PvJg==,type:str]
-    SECRET_PUBLIC_DOMAIN: ENC[AES256_GCM,data:0w7RSIUxgEP7EVUwwg==,iv:lkWW74lKYUsfPBDMvclms4Y6t/rx2emH9DfurI5cxYs=,tag:Xtn99Ds9Iz9pmrGJTw/sWA==,type:str]
-    SECRET_PRIVATE_DOMAIN: ENC[AES256_GCM,data:N3AIRKMc3m+vbo1QR+1noP0=,iv:FvhnK4I6HUVyx/eNCt6YE0e8abi1JYEpsellEmvS39c=,tag:63AxFbPl+JthkfhdE1SG8Q==,type:str]
     SECRET_EMAIL: ENC[AES256_GCM,data:YJ0ywFiWLA6eFwOIbVCKnJdXohh6vhwxkw==,iv:K592a2alZbFrDwwid+mhNWGcOEGIM1xzJtceBx0RTP8=,tag:nZbZJxxI3WHfPg3jyc2a1w==,type:str]
     SECRET_GRAFANA_PASSWORD: ENC[AES256_GCM,data:zkpE8PKI/2si3ZwkTw==,iv:t9EYCs7N7YbVqtq6GMDUytazClH08RT4w5uD4swGho0=,tag:sgivAkgfq9H3he3+9GZD+w==,type:str]
     SECRET_KURED_DISCORD_WEBHOOK: ENC[AES256_GCM,data:g3Fsfw==,iv:Kh/2+8gCNVUP8xkN9B8u27wJ1eqttkE4UWSEaI7Qv2A=,tag:Cx2ruNX63bCkiEDJ4vlHAg==,type:str]
     SECRET_MQTT_PASSWORD: ENC[AES256_GCM,data:Ip7jJA==,iv:g3oSOa/XNKqBUOKWieSLRMDnlj3mxZNx9H/2DPRX5iA=,tag:BPKVsMznJKT3io/a5Awi8A==,type:str]
     SECRET_MQTT_USERNAME: ENC[AES256_GCM,data:qrXy1w==,iv:dbb05m9bxsQZK5atRMGwzP0Wom6ur2nZPVtgz83dWTc=,tag:B3teERadVs9WglQs9twLhg==,type:str]
+    SECRET_PRIVATE_DOMAIN: ENC[AES256_GCM,data:N3AIRKMc3m+vbo1QR+1noP0=,iv:FvhnK4I6HUVyx/eNCt6YE0e8abi1JYEpsellEmvS39c=,tag:63AxFbPl+JthkfhdE1SG8Q==,type:str]
+    SECRET_PUBLIC_DOMAIN: ENC[AES256_GCM,data:0w7RSIUxgEP7EVUwwg==,iv:lkWW74lKYUsfPBDMvclms4Y6t/rx2emH9DfurI5cxYs=,tag:Xtn99Ds9Iz9pmrGJTw/sWA==,type:str]
+    SECRET_UNIFI_DOMAIN: ENC[AES256_GCM,data:7LL/G8iULzylrbZbIaI=,iv:z0tJoTJYzPgDh6alP3SqniF7n1OWB2Yqm6OvUCYZ9MM=,tag:yxtc1MZ3rXfjSpg/NCYerw==,type:str]
+    SECRET_UP_UNIFI_DEFAULT_PASS: ENC[AES256_GCM,data:RDJ3UIeZwzGIEag4VTZgczEwVSk=,iv:RZBJqnMl1iSnALodFCTS9EAkNy93vFzW6iTMWxgUB94=,tag:riNAFefsFIgt36GEhZ/7rA==,type:str]
+    SECRET_UP_UNIFI_DEFAULT_USER: ENC[AES256_GCM,data:c6yjOiaBg8mYSsTnB4bbjw==,iv:/vW0o+/iHNMK9l7E+OiKsmK2N7BUcODgkrHzLPtZJD4=,tag:h211xMSoLx0whXAmoa1umA==,type:str]
 sops:
     kms: []
     gcp_kms:
@@ -31,8 +34,8 @@ sops:
             bEthME45cnI4MGdEZ2VYRlk3aU1qdjgKUnHIHQSP3gi1jJK9bnKrXzc97dsDtisN
             HgRS5n9Eau1vrjuqsQd49Fypgys2zXpYsd+60kkxv/VTKZm9tWjkKA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-03-24T17:37:30Z"
-    mac: ENC[AES256_GCM,data:UGmoo4MEmGak20P+oFw5ppm+/+Ek7/9Cle3jw+UNUBPejItIH0rg1WQAW6Hq6tFkZ++RbiONqapdnY2REmGgYEJzA98w9TuloYS1/is7AWhfiRHadN1hFasn95GYF3lhrhh7o01Ixty42+k1X9r21rf6wwu8ZRJwvMNsgbZiCbA=,iv:hTQJmTbowi3o9rWwHvwmDvho2d7OvoW8/mzWYEr4Fb4=,tag:g0GAlUc8+681+jPgUoNtjA==,type:str]
+    lastmodified: "2022-03-26T15:52:06Z"
+    mac: ENC[AES256_GCM,data:RVo4DYNJLaxDoaLZeVdhPpZukv0PUSk6z4k+reALWFZkb96/0Yx1vFPS/vYQxLJ3McRVmfevEJok7702/yqpnL87yffAl8JzQC8/21OqzmR26CK/Tpd24yTCn+XJOf1bVfnm/wE36O8t8cfCAmaCSnwAMzHnoE6cMFuCs4FNIyw=,iv:6mMesk68Gg0Av+dj+7R8l3sWzeDShtTKFZprbvmbj2M=,tag:GCyy+2rfMQ8WoyifsKu42g==,type:str]
     pgp:
         - created_at: "2022-03-21T15:38:08Z"
           enc: |
