--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -13,7 +13,7 @@ stringData:
     SECRET_MQTT_USERNAME: ENC[AES256_GCM,data:qrXy1w==,iv:dbb05m9bxsQZK5atRMGwzP0Wom6ur2nZPVtgz83dWTc=,tag:B3teERadVs9WglQs9twLhg==,type:str]
     SECRET_PRIVATE_DOMAIN: ENC[AES256_GCM,data:N3AIRKMc3m+vbo1QR+1noP0=,iv:FvhnK4I6HUVyx/eNCt6YE0e8abi1JYEpsellEmvS39c=,tag:63AxFbPl+JthkfhdE1SG8Q==,type:str]
     SECRET_PUBLIC_DOMAIN: ENC[AES256_GCM,data:0w7RSIUxgEP7EVUwwg==,iv:lkWW74lKYUsfPBDMvclms4Y6t/rx2emH9DfurI5cxYs=,tag:Xtn99Ds9Iz9pmrGJTw/sWA==,type:str]
-    SECRET_UNIFI_DOMAIN: ENC[AES256_GCM,data:7LL/G8iULzylrbZbIaI=,iv:z0tJoTJYzPgDh6alP3SqniF7n1OWB2Yqm6OvUCYZ9MM=,tag:yxtc1MZ3rXfjSpg/NCYerw==,type:str]
+    SECRET_UNIFI_DOMAIN: ENC[AES256_GCM,data:JIA388qNJDBwmU4167c2TWQu3A==,iv:FmXpzQe82wYJmU+SuTUENHmOCnHXP2SyCME1DyOaZa4=,tag:DO5FL61+0WNjyWAEhdX/bA==,type:str]
     SECRET_UP_UNIFI_DEFAULT_PASS: ENC[AES256_GCM,data:RDJ3UIeZwzGIEag4VTZgczEwVSk=,iv:RZBJqnMl1iSnALodFCTS9EAkNy93vFzW6iTMWxgUB94=,tag:riNAFefsFIgt36GEhZ/7rA==,type:str]
     SECRET_UP_UNIFI_DEFAULT_USER: ENC[AES256_GCM,data:c6yjOiaBg8mYSsTnB4bbjw==,iv:/vW0o+/iHNMK9l7E+OiKsmK2N7BUcODgkrHzLPtZJD4=,tag:h211xMSoLx0whXAmoa1umA==,type:str]
 sops:
@@ -34,8 +34,8 @@ sops:
             bEthME45cnI4MGdEZ2VYRlk3aU1qdjgKUnHIHQSP3gi1jJK9bnKrXzc97dsDtisN
             HgRS5n9Eau1vrjuqsQd49Fypgys2zXpYsd+60kkxv/VTKZm9tWjkKA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-03-26T15:52:06Z"
-    mac: ENC[AES256_GCM,data:RVo4DYNJLaxDoaLZeVdhPpZukv0PUSk6z4k+reALWFZkb96/0Yx1vFPS/vYQxLJ3McRVmfevEJok7702/yqpnL87yffAl8JzQC8/21OqzmR26CK/Tpd24yTCn+XJOf1bVfnm/wE36O8t8cfCAmaCSnwAMzHnoE6cMFuCs4FNIyw=,iv:6mMesk68Gg0Av+dj+7R8l3sWzeDShtTKFZprbvmbj2M=,tag:GCyy+2rfMQ8WoyifsKu42g==,type:str]
+    lastmodified: "2022-03-26T15:56:31Z"
+    mac: ENC[AES256_GCM,data:uXm4kOpkCWHsuVTIy/U5liVpfay0KkINWg/k2jo0UFNWa2d9KX29RNhJ+tucFdHGxBm2rFbcBIWYVVnMMJunjoz7HxvXH5XffAQajwh/ZSqLtTx/UWY+E2cixJ3qnKHTb/1cStGSdDJNBTrfQ0HV48zyh3x8HiKQseFLosw9obE=,iv:Jh4A1YvwzlKMW4ZCEzxQ5/kiIyOKvZTyQXqSD3jGfPA=,tag:mk3zlJWpoygcdSFHGZbjuw==,type:str]
     pgp:
         - created_at: "2022-03-21T15:38:08Z"
           enc: |
