--- a/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
+++ b/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
@@ -135,12 +135,12 @@ spec:
     #     - 10.1.101.100
     #     - 10.1.101.101
     #     - 10.1.101.102
-    # kubeScheduler:
-    #   enabled: true
-    #   endpoints:
-    #     - 10.1.101.100
-    #     - 10.1.101.101
-    #     - 10.1.101.102
+    kubeScheduler:
+      enabled: true
+      endpoints:
+        - 10.1.101.100
+        - 10.1.101.101
+        - 10.1.101.102
     kubeProxy:
       enabled: true
       endpoints:
