--- a/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
+++ b/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
@@ -129,18 +129,18 @@ spec:
             targetLabel: instance
     kubeApiServer:
       enabled: true
-    # kubeControllerManager:
-    #   enabled: true
-    #   endpoints:
-    #     - 10.1.101.100
-    #     - 10.1.101.101
-    #     - 10.1.101.102
-    kubeScheduler:
+    kubeControllerManager:
       enabled: true
       endpoints:
         - 10.1.101.100
         - 10.1.101.101
         - 10.1.101.102
+    # kubeScheduler:
+    #   enabled: true
+    #   endpoints:
+    #     - 10.1.101.100
+    #     - 10.1.101.101
+    #     - 10.1.101.102
     kubeProxy:
       enabled: true
       endpoints:
