--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -9,10 +9,14 @@ stringData:
     SECRET_EMAIL: ENC[AES256_GCM,data:YJ0ywFiWLA6eFwOIbVCKnJdXohh6vhwxkw==,iv:K592a2alZbFrDwwid+mhNWGcOEGIM1xzJtceBx0RTP8=,tag:nZbZJxxI3WHfPg3jyc2a1w==,type:str]
     SECRET_GRAFANA_PASSWORD: ENC[AES256_GCM,data:zkpE8PKI/2si3ZwkTw==,iv:t9EYCs7N7YbVqtq6GMDUytazClH08RT4w5uD4swGho0=,tag:sgivAkgfq9H3he3+9GZD+w==,type:str]
     SECRET_KURED_DISCORD_WEBHOOK: ENC[AES256_GCM,data:g3Fsfw==,iv:Kh/2+8gCNVUP8xkN9B8u27wJ1eqttkE4UWSEaI7Qv2A=,tag:Cx2ruNX63bCkiEDJ4vlHAg==,type:str]
+    SECRET_LOKI_ACCESS_KEY: ENC[AES256_GCM,data:a7mbL2+nVSdFgBy8EHQGH8/ZroHkpErIXQ==,iv:1pwhHJAjXOnD68MVEMG9rweNLZWf0RuoFr86A5Wcb4c=,tag:cDVsj52f8R/XsBLk98mhlg==,type:str]
+    SECRET_LOKI_BUCKET: ENC[AES256_GCM,data:oTjdUOXNa4A=,iv:3lBSTgwCYMXeUjoTtx9Z7pArdha1CAau+0QRucq9m/o=,tag:aGRx9xYdfrSYKKAV8Fi2gA==,type:str]
+    SECRET_LOKI_SECRET_KEY: ENC[AES256_GCM,data:bWtqSS0qbN2oh23qTIYauJI678CxKQuL30+Mk7fdYA==,iv:3/3/8IebRrPHV8zrZri59zca/D2j6IUeldUe8ZNVU/U=,tag:NfKIMvambbLam8Jvs+rdtA==,type:str]
     SECRET_MQTT_PASSWORD: ENC[AES256_GCM,data:Ip7jJA==,iv:g3oSOa/XNKqBUOKWieSLRMDnlj3mxZNx9H/2DPRX5iA=,tag:BPKVsMznJKT3io/a5Awi8A==,type:str]
     SECRET_MQTT_USERNAME: ENC[AES256_GCM,data:qrXy1w==,iv:dbb05m9bxsQZK5atRMGwzP0Wom6ur2nZPVtgz83dWTc=,tag:B3teERadVs9WglQs9twLhg==,type:str]
     SECRET_PRIVATE_DOMAIN: ENC[AES256_GCM,data:N3AIRKMc3m+vbo1QR+1noP0=,iv:FvhnK4I6HUVyx/eNCt6YE0e8abi1JYEpsellEmvS39c=,tag:63AxFbPl+JthkfhdE1SG8Q==,type:str]
     SECRET_PUBLIC_DOMAIN: ENC[AES256_GCM,data:0w7RSIUxgEP7EVUwwg==,iv:lkWW74lKYUsfPBDMvclms4Y6t/rx2emH9DfurI5cxYs=,tag:Xtn99Ds9Iz9pmrGJTw/sWA==,type:str]
+    SECRET_S3_DOMAIN: ENC[AES256_GCM,data:iF2rQq90lZU8jAgb/NenyqWKLYJmnHeTwtQj,iv:FcYlX/1EtbvYbGp4O3o8XujVlxx7KX20I53G4HdpRM8=,tag:rfpPoIdBJaeMA6j2k8liTQ==,type:str]
     SECRET_UNIFI_DOMAIN: ENC[AES256_GCM,data:JIA388qNJDBwmU4167c2TWQu3A==,iv:FmXpzQe82wYJmU+SuTUENHmOCnHXP2SyCME1DyOaZa4=,tag:DO5FL61+0WNjyWAEhdX/bA==,type:str]
     SECRET_UP_UNIFI_DEFAULT_PASS: ENC[AES256_GCM,data:RDJ3UIeZwzGIEag4VTZgczEwVSk=,iv:RZBJqnMl1iSnALodFCTS9EAkNy93vFzW6iTMWxgUB94=,tag:riNAFefsFIgt36GEhZ/7rA==,type:str]
     SECRET_UP_UNIFI_DEFAULT_USER: ENC[AES256_GCM,data:c6yjOiaBg8mYSsTnB4bbjw==,iv:/vW0o+/iHNMK9l7E+OiKsmK2N7BUcODgkrHzLPtZJD4=,tag:h211xMSoLx0whXAmoa1umA==,type:str]
@@ -34,8 +38,8 @@ sops:
             bEthME45cnI4MGdEZ2VYRlk3aU1qdjgKUnHIHQSP3gi1jJK9bnKrXzc97dsDtisN
             HgRS5n9Eau1vrjuqsQd49Fypgys2zXpYsd+60kkxv/VTKZm9tWjkKA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-03-26T15:57:31Z"
-    mac: ENC[AES256_GCM,data:QQu2m3hf//3LEq1xtalq1VbDipCthUoTluMNJNpA7IaQxzWy95oEh+8Sj0WoSewci0oqvluh6TbnHFrNB6cXao80c2nlj64O9Y+MCIWjnMHaAkurJEsHFwnEPA/JNvN2TvmS+lYQ0tzHaoZTI2GZGlYY5iIBtfPJiIbV/HRhrEs=,iv:bQ6Bcias9RtGaVvoDoutg9zbpXr4VEe/A0maakAVwaA=,tag:ky2Gr/U6nMruft1mM0KpBg==,type:str]
+    lastmodified: "2022-03-26T16:35:16Z"
+    mac: ENC[AES256_GCM,data:zLBzCWvzbAQrfNJSFFxTpEXD39eZ6x9nUSA9Y6qZGoKQJ0Ft4wXXONP7xFlSgjISXVWUU+XHmSyIgYiKfGOJTqs0qEiAN9Ogrimit7nBiMqozcUHyLw8/j870dRKHXNbYzDzN/BoVUBfdhQPmyLH5m+iFSx1JqJzlPfoLRNU/2w=,iv:pEb/iUzO5ZtCCU/S6oVsgzSjMEt/KcDo6PxgxALCftg=,tag:IMUaL/Hwt6QcpMExMhVitg==,type:str]
     pgp:
         - created_at: "2022-03-21T15:38:08Z"
           enc: |
