--- a/cluster/apps/monitoring/kustomization.yaml
+++ b/cluster/apps/monitoring/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
   - grafana
   - karma
   - kube-prometheus-stack
-  # - loki
+  - loki
   - node-problem-detector
   - thanos
   - unifi-poller
