--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "ansible.ansibleLint.arguments": "-c .github/lint/.ansible-lint",
+    "ansible.ansibleLint.arguments": "-c .github/linters/.ansible-lint",
     "discord.enabled": true,
     "files.associations": {
         "*.json5": "jsonc",
@@ -12,12 +12,11 @@
         ".taskfiles": "utils",
         "hack": "scripts"
     },
-    "prettier.configPath": ".github/lint/.prettierrc.yaml",
-    "prettier.ignorePath": ".github/lint/.prettierignore",
+    "prettier.configPath": ".github/linters/.prettierrc.yaml",
+    "prettier.ignorePath": ".github/linters/.prettierignore",
     "yaml.schemas": {
         "Kubernetes": "cluster/*.yaml"
     },
-    // "editor.fontFamily": "FiraCode Nerd Font",
     "editor.fontLigatures": true,
     "editor.bracketPairColorization.enabled": true,
     "editor.guides.bracketPairs":"active",
