--- a/cluster/apps/monitoring/blackbox-exporter/helm-release.yaml
+++ b/cluster/apps/monitoring/blackbox-exporter/helm-release.yaml
@@ -9,7 +9,7 @@ spec:
   chart:
     spec:
       chart: prometheus-blackbox-exporter
-      version: 5.6.0
+      version: 5.5.1
       sourceRef:
         kind: HelmRepository
         name: prometheus-community-charts
@@ -35,6 +35,13 @@ spec:
     allowIcmp: true
     config:
       modules:
+        http_2xx:
+          prober: http
+          timeout: 5s
+          http:
+            valid_http_versions: ["HTTP/1.1", "HTTP/2.0"]
+            follow_redirects: true
+            preferred_ip_protocol: "ip4"
         icmp:
           prober: icmp
           timeout: 30s
@@ -48,8 +55,14 @@ spec:
         interval: 2m
         scrapeTimeout: 30s
       targets:
+        - module: http_2xx
+          name: opnsense-http
+          url: "https://opnsense.${SECRET_PRIVATE_DOMAIN}"
+        - module: http_2xx
+          name: unifi-http
+          url: "https://unifi.${SECRET_UNIFI_DOMAIN}"
         - module: icmp
-          name: opnsense
+          name: opnsense-icmp
           url: opnsense
     prometheusRule:
       enabled: true
@@ -57,17 +70,27 @@ spec:
         app: prometheus-operator
         release: prometheus
       rules:
-        - alert: HostDown
+        - alert: BlackboxSslCertificateWillExpireSoon
+          expr: probe_ssl_earliest_cert_expiry - time() < 86400 * 3
+          for: 5m
+          labels:
+            severity: critical
+          annotations:
+            description: |-
+              The SSL certificate for {{"{{ $labels.target }}"}} will expire in less than 3 days
+        - alert: BlackboxSslCertificateExpired
+          expr: probe_ssl_earliest_cert_expiry - time() <= 0
+          for: 5m
+          labels:
+            severity: critical
+          annotations:
+            description: |-
+              The SSL certificate for {{"{{ $labels.target }}"}} has expired
+        - alert: BlackboxProbeFailed
           expr: probe_success == 0
           for: 5m
           labels:
             severity: critical
           annotations:
-            message: The host {{"{{ $labels.target }}"}} is currently unreachable
-        - alert: SlowResponseTime
-          annotations:
-            message: The response time for {{"{{ $labels.target }}"}} has been greater than 30 seconds for 5 minutes.
-          expr: probe_duration_seconds > 30
-          for: 5m
-          labels:
-            severity: warning
+            description: |-
+              The host {{"{{ $labels.target }}"}} is currently unreachable
