feat: add overseerr

--- a/cluster/apps/media/kustomization.yaml
+++ b/cluster/apps/media/kustomization.yaml
@@ -5,7 +5,7 @@ resources:
   - gaps
   # - lidarr
   # - media-browser
-  # - overseerr
+  - overseerr
   # - plex
   # - prowlarr
   # - qbittorrent
