--- a/cluster/apps/kustomization.yaml
+++ b/cluster/apps/kustomization.yaml
@@ -5,7 +5,7 @@ resources:
   - calico-system
   - cert-manager
   - flux-system
-  # - home
+  - home
   # - kasten-io
   - kube-system
   # - media
