feat: enable mosquitto

--- a/cluster/apps/home/mosquitto/secret.sops.yaml
+++ b/cluster/apps/home/mosquitto/secret.sops.yaml
@@ -12,8 +12,8 @@ metadata:
     name: mosquitto
     namespace: home
 stringData:
-    mqtt.conf: ENC[AES256_GCM,data:zW8S4Q==,iv:cRQ+sdYtSljlMTn+GC83BeIcDN7QgidmxA3pD5wAVZE=,tag:9GhoQE6yWSrkDvkvcBkPNg==,type:str]
-    mosquitto_pwd: ENC[AES256_GCM,data:yclF4A==,iv:XdENMPeLXq6BCu0nTZyT1u7YVf1uUJa1zo5ZBhw4V7I=,tag:tmLmKyi0tgh02YCKwc7Q7Q==,type:str]
+    mqtt.conf: ENC[AES256_GCM,data:BL1gIHMMITVpGE8Qag0fum+aUo2iCcBePi5ZbkEgul7paw8InDtsf4qGjeXavIoATXfJKD4Mu8z4mRporTq4KZH2Ygx/g0frn7R9A6RnkK5RDOiHjS8xPYhPeQkoJZA=,iv:61TQ6n3QlVwJKKfoEYLRSZKUP/L+XNmeGA8RpZ2k6T0=,tag:cg4QFKCKbq2Fs7Z4uaK02w==,type:str]
+    mosquitto_pwd: ENC[AES256_GCM,data:dMZawimd+JNEydtOJg==,iv:OP5KsmezOd1w7WRZsDDuw7DM45VBRRoHIYOMqe3x1Sk=,tag:hGo226QrwG1RfnPOsp+++A==,type:str]
 sops:
     kms: []
     gcp_kms:
@@ -32,8 +32,8 @@ sops:
             TEJ1VmpNcGNxTjFiT0JGRWdlWG85RHMKgaaK5fIcWCizBhnfkU1g3kr697oOWISP
             pJ8kndg6eZAVVro4agfnT9SDkNv++oiFdDB78bscwnTtDdaU4yGWfQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-03-26T18:43:02Z"
-    mac: ENC[AES256_GCM,data:pgvcK1HVEHbN3F81/DuDPQG2+s3ShUfiS9OM8ywM/QpEp6BAI49xfchkrpfZe1LwBeIRmP2OCB70HsqJwRmuZ67YDgjbKE5yk4F+9v9MPG9Ba8lbN+PdL3Kw+emI2xoiEr2FC2GxpS+4eSKZeUJ9tottdaInRdrsI/G4BDbsXKM=,iv:JRfGlEH46H5OvvQj2y/JUbpwbIKvxuiow64NGRbi70E=,tag:7gK8iu+qxHzo5Dxlgc1eGQ==,type:str]
+    lastmodified: "2022-03-26T22:28:47Z"
+    mac: ENC[AES256_GCM,data:Wl5aJDvtcMs7eiVPClyF2wINxl7EQ93m+FIKwsgEA3RahUnsfKlEOBdrHq39wWYfXVTQPq+48XRBsHou7piCxhxSj7m065HZgsCq/DPdMXpAxGyPafaPmFRA/Ovt62R6+R/jJ7+Rd4E/GZ3qTmKJ4MfQegqQQECUBSafBV6y6WQ=,iv:QLIGuSYV9JaYHeXj2LRA/2tjoGDwOTUmlfzTajkfWgc=,tag:FvVX02sTuiNgwA2MWsoZtg==,type:str]
     pgp:
         - created_at: "2022-03-26T18:43:01Z"
           enc: |
