feat: enable mosquitto

--- a/cluster/apps/home/mosquitto/secret.sops.yaml
+++ b/cluster/apps/home/mosquitto/secret.sops.yaml
@@ -13,7 +13,7 @@ metadata:
     namespace: home
 stringData:
     mqtt.conf: ENC[AES256_GCM,data:BL1gIHMMITVpGE8Qag0fum+aUo2iCcBePi5ZbkEgul7paw8InDtsf4qGjeXavIoATXfJKD4Mu8z4mRporTq4KZH2Ygx/g0frn7R9A6RnkK5RDOiHjS8xPYhPeQkoJZA=,iv:61TQ6n3QlVwJKKfoEYLRSZKUP/L+XNmeGA8RpZ2k6T0=,tag:cg4QFKCKbq2Fs7Z4uaK02w==,type:str]
-    mosquitto_pwd: ENC[AES256_GCM,data:dMZawimd+JNEydtOJg==,iv:OP5KsmezOd1w7WRZsDDuw7DM45VBRRoHIYOMqe3x1Sk=,tag:hGo226QrwG1RfnPOsp+++A==,type:str]
+    mosquitto_pwd: ENC[AES256_GCM,data:47HXexIQ8Tbcw5GjCUmGir0/QcSc9pLutu+PwzbnvLLR6LV4qGgLnSVPY3G42gzuiXGGVMja2cSwnmcjFkedvyYa8R/3FBKDLLGV9JgNmoFY8ENr/mKmDcaVXAxMH8+CD5mLZf10VYmnDZL+TXBbhMK5q4g7P0A=,iv:t+LmZtU2h4NcNROqtrL29sWm0BIUQDRlIJl5CCewgwA=,tag:RGr+vhyaML/nyG/X7vMoxw==,type:str]
 sops:
     kms: []
     gcp_kms:
@@ -32,8 +32,8 @@ sops:
             TEJ1VmpNcGNxTjFiT0JGRWdlWG85RHMKgaaK5fIcWCizBhnfkU1g3kr697oOWISP
             pJ8kndg6eZAVVro4agfnT9SDkNv++oiFdDB78bscwnTtDdaU4yGWfQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-03-26T22:28:47Z"
-    mac: ENC[AES256_GCM,data:Wl5aJDvtcMs7eiVPClyF2wINxl7EQ93m+FIKwsgEA3RahUnsfKlEOBdrHq39wWYfXVTQPq+48XRBsHou7piCxhxSj7m065HZgsCq/DPdMXpAxGyPafaPmFRA/Ovt62R6+R/jJ7+Rd4E/GZ3qTmKJ4MfQegqQQECUBSafBV6y6WQ=,iv:QLIGuSYV9JaYHeXj2LRA/2tjoGDwOTUmlfzTajkfWgc=,tag:FvVX02sTuiNgwA2MWsoZtg==,type:str]
+    lastmodified: "2022-03-26T22:36:14Z"
+    mac: ENC[AES256_GCM,data:iOAIMNHFnBrO2TteGnndVoQ+ozgWjxqLgVWlbbOyTLbQ/Q8A45CfR8YAcclu/UI/vCvqxbkizbwy7KXUHW4HLfcDQ+F4siT7iw352fEPmUZEMLdv4klbIh4UOtbwgzn8K5rdi4FBt6Le55762bznduc2O4pdjGTjaPIUqfaZSpE=,iv:mLPhpOLohEX8X8av/MuL3ljOo2+LZJR32twoJm79aZM=,tag:JOoXq2UhuZwVejtOg1/l9Q==,type:str]
     pgp:
         - created_at: "2022-03-26T18:43:01Z"
           enc: |
