--- a/cluster/apps/media/kustomization.yaml
+++ b/cluster/apps/media/kustomization.yaml
@@ -2,9 +2,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - cephfs-pvc.yaml
   - gaps
   # - lidarr
-  # - media-browser
+  - media-browser
   - overseerr
   # - plex
   # - prowlarr
