--- a/cluster/core/rook-ceph/cluster/cephfs.yaml
+++ b/cluster/core/rook-ceph/cluster/cephfs.yaml
@@ -1,17 +1,17 @@
----
-apiVersion: ceph.rook.io/v1
-kind: CephFilesystem
-metadata:
-  name: k8s-cephfs
-  namespace: rook-ceph
-spec:
-  metadataPool:
-    replicated:
-      size: 3
-  dataPools:
-    - replicated:
-        size: 3
-  preserveFilesystemOnDelete: false
-  metadataServer:
-    activeCount: 1
-    activeStandby: true
+# ---
+# apiVersion: ceph.rook.io/v1
+# kind: CephFilesystem
+# metadata:
+#   name: k8s-cephfs
+#   namespace: rook-ceph
+# spec:
+#   metadataPool:
+#     replicated:
+#       size: 3
+#   dataPools:
+#     - replicated:
+#         size: 3
+#   preserveFilesystemOnDelete: false
+#   metadataServer:
+#     activeCount: 1
+#     activeStandby: true
