--- a/cluster/apps/media/cephfs-pvc.yaml
+++ b/cluster/apps/media/cephfs-pvc.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: cephfs-media-pvc
-  namespace: kube-system
+  namespace: media
 spec:
   accessModes:
     - ReadWriteMany
