debug: cephfs not working

--- a/cluster/core/rook-ceph/operator/helm-release.yaml
+++ b/cluster/core/rook-ceph/operator/helm-release.yaml
@@ -32,7 +32,7 @@ spec:
       enabled: true
     csi:
       enableCephfsDriver: true
-      enableCephfsSnapshotter: false
+      enableCephfsSnapshotter: true
     monitoring:
       enabled: true
     resources:
