debug: remove mediabrowser

--- a/cluster/apps/media/kustomization.yaml
+++ b/cluster/apps/media/kustomization.yaml
@@ -5,7 +5,7 @@ resources:
   - cephfs-pvc.yaml
   - gaps
   # - lidarr
-  - media-browser
+  # - media-browser
   - overseerr
   # - plex
   # - prowlarr
