--- a/cluster/apps/media/plex/helm-release.yaml
+++ b/cluster/apps/media/plex/helm-release.yaml
@@ -63,16 +63,17 @@ spec:
             claimName: cephfs-media-pvc
         mountPath: /media
         readOnly: true
-      backup:
-        enabled: true
-        type: pvc
-        volumeSpec:
-          - name: media
-            persistentVolumeClaim:
-            claimName: cephfs-media-pvc
-        mountPath: /config/Backups
-        readOnly: false
-        accessMode: ReadWriteMany
+      # backup:
+      #   enabled: true
+      #   type: pvc
+      #   volumeSpec:
+      #     - name: media
+      #       persistentVolumeClaim:
+      #       claimName: cephfs-media-pvc
+      #   mountPath: /config/Backups
+      #   readOnly: false
+      #   accessMode: ReadWriteMany
+      #   size: 100Gi
       transcode:
         enabled: true
         type: emptyDir
