--- a/cluster/apps/media/plex/helm-release.yaml
+++ b/cluster/apps/media/plex/helm-release.yaml
@@ -63,6 +63,7 @@ spec:
             claimName: cephfs-media-pvc
         mountPath: /media
         readOnly: true
+        accessMode: ReadWriteMany
       # backup:
       #   enabled: true
       #   type: pvc
