feat: test plex

--- a/cluster/apps/media/plex/helm-release.yaml
+++ b/cluster/apps/media/plex/helm-release.yaml
@@ -64,6 +64,7 @@ spec:
         mountPath: /media
         readOnly: true
         accessMode: ReadWriteMany
+        size: 10Gi
       # backup:
       #   enabled: true
       #   type: pvc
