--- a/cluster/apps/media/plex/helm-release.yaml
+++ b/cluster/apps/media/plex/helm-release.yaml
@@ -56,15 +56,9 @@ spec:
         existingClaim: plex-config-v1
       media:
         enabled: true
-        type: pvc
-        volumeSpec:
-          - name: media
-            persistentVolumeClaim:
-            claimName: cephfs-media-pvc
+        existingClaim: cephfs-media-pvc
         mountPath: /media
         readOnly: true
-        accessMode: ReadWriteMany
-        size: 10Gi
       # backup:
       #   enabled: true
       #   type: pvc
