--- a/cluster/apps/media/kustomization.yaml
+++ b/cluster/apps/media/kustomization.yaml
@@ -2,12 +2,12 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - cephfs-pvc.yaml
+  # - cephfs-pvc.yaml
   - gaps
   # - lidarr
   # - media-browser
   - overseerr
-  - plex
+  # - plex
   # - prowlarr
   # - qbittorrent
   # - radarr
