debug: disable uptime robot heartbeat

--- a/cluster/apps/monitoring/kustomization.yaml
+++ b/cluster/apps/monitoring/kustomization.yaml
@@ -11,5 +11,5 @@ resources:
   - node-problem-detector
   - thanos
   - unifi-poller
-  - uptimerobot-heartbeat
+  # - uptimerobot-heartbeat
   # - vector
