debug: external ceph cluster troubles

--- a/cluster/core/rook-ceph/cluster/cluster-external.yaml
+++ b/cluster/core/rook-ceph/cluster/cluster-external.yaml
@@ -15,8 +15,8 @@ spec:
         disabled: false
         interval: 45s
   dataDirHostPath: /var/lib/rook
-  cephVersion:
-    image: quay.io/ceph/ceph:v16.2.7
+  # cephVersion:
+  #   image: quay.io/ceph/ceph:v16.2.7
   # optionally, the ceph-mgr IP address can be passed to gather metric from the prometheus exporter
   monitoring:
     enabled: true
