--- a/cluster/core/rook-ceph/cluster/storageclass.yaml
+++ b/cluster/core/rook-ceph/cluster/storageclass.yaml
@@ -1,41 +1,41 @@
----
-apiVersion: storage.k8s.io/v1
-kind: StorageClass
-metadata:
-  name: rook-ceph-block
-  annotations:
-    storageclass.kubernetes.io/is-default-class: "true"
-provisioner: rook-ceph.rbd.csi.ceph.com
-parameters:
-  clusterID: rook-ceph
-  pool: k8s
-  imageFormat: "2"
-  imageFeatures: layering
-  csi.storage.k8s.io/provisioner-secret-name: rook-csi-rbd-provisioner
-  csi.storage.k8s.io/provisioner-secret-namespace: rook-ceph
-  csi.storage.k8s.io/node-stage-secret-name: rook-csi-rbd-node
-  csi.storage.k8s.io/node-stage-secret-namespace: rook-ceph
-  csi.storage.k8s.io/controller-expand-secret-name: rook-csi-rbd-provisioner
-  csi.storage.k8s.io/controller-expand-secret-namespace: rook-ceph
-  csi.storage.k8s.io/fstype: ext4
-reclaimPolicy: Delete
-allowVolumeExpansion: true
+# ---
+# apiVersion: storage.k8s.io/v1
+# kind: StorageClass
+# metadata:
+#   name: rook-ceph-block
+#   annotations:
+#     storageclass.kubernetes.io/is-default-class: "true"
+# provisioner: rook-ceph.rbd.csi.ceph.com
+# parameters:
+#   clusterID: rook-ceph
+#   pool: k8s
+#   imageFormat: "2"
+#   imageFeatures: layering
+#   csi.storage.k8s.io/provisioner-secret-name: rook-csi-rbd-provisioner
+#   csi.storage.k8s.io/provisioner-secret-namespace: rook-ceph
+#   csi.storage.k8s.io/node-stage-secret-name: rook-csi-rbd-node
+#   csi.storage.k8s.io/node-stage-secret-namespace: rook-ceph
+#   csi.storage.k8s.io/controller-expand-secret-name: rook-csi-rbd-provisioner
+#   csi.storage.k8s.io/controller-expand-secret-namespace: rook-ceph
+#   csi.storage.k8s.io/fstype: ext4
+# reclaimPolicy: Delete
+# allowVolumeExpansion: true
 
----
-apiVersion: storage.k8s.io/v1
-kind: StorageClass
-metadata:
-  name: rook-cephfs
-provisioner: rook-ceph.cephfs.csi.ceph.com # driver:namespace:operator
-parameters:
-  clusterID: rook-ceph # namespace:cluster
-  fsName: k8s-cephfs
-  pool: k8s-cephfs_data
-  csi.storage.k8s.io/provisioner-secret-name: rook-csi-cephfs-provisioner
-  csi.storage.k8s.io/provisioner-secret-namespace: rook-ceph # namespace:cluster
-  csi.storage.k8s.io/controller-expand-secret-name: rook-csi-cephfs-provisioner
-  csi.storage.k8s.io/controller-expand-secret-namespace: rook-ceph # namespace:cluster
-  csi.storage.k8s.io/node-stage-secret-name: rook-csi-cephfs-node
-  csi.storage.k8s.io/node-stage-secret-namespace: rook-ceph # namespace:cluster
-reclaimPolicy: Delete
-allowVolumeExpansion: true
+# ---
+# apiVersion: storage.k8s.io/v1
+# kind: StorageClass
+# metadata:
+#   name: rook-cephfs
+# provisioner: rook-ceph.cephfs.csi.ceph.com # driver:namespace:operator
+# parameters:
+#   clusterID: rook-ceph # namespace:cluster
+#   fsName: k8s-cephfs
+#   pool: k8s-cephfs_data
+#   csi.storage.k8s.io/provisioner-secret-name: rook-csi-cephfs-provisioner
+#   csi.storage.k8s.io/provisioner-secret-namespace: rook-ceph # namespace:cluster
+#   csi.storage.k8s.io/controller-expand-secret-name: rook-csi-cephfs-provisioner
+#   csi.storage.k8s.io/controller-expand-secret-namespace: rook-ceph # namespace:cluster
+#   csi.storage.k8s.io/node-stage-secret-name: rook-csi-cephfs-node
+#   csi.storage.k8s.io/node-stage-secret-namespace: rook-ceph # namespace:cluster
+# reclaimPolicy: Delete
+# allowVolumeExpansion: true
