--- a/cluster/apps/kustomization.yaml
+++ b/cluster/apps/kustomization.yaml
@@ -2,14 +2,14 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - calico-system
-  - cert-manager
-  - flux-system
-  - home
-  # - kasten-io
-  - kube-system
-  - media
-  - monitoring
-  - networking
-  - rook-ceph
+  # - calico-system
+  # - cert-manager
+  # - flux-system
+  # - home
+  # # - kasten-io
+  # - kube-system
+  # - media
+  # - monitoring
+  # - networking
+  # - rook-ceph
   - system-upgrade
