debug: external ceph cluster troubles

--- a/cluster/core/rook-ceph/cluster/kustomization.yaml
+++ b/cluster/core/rook-ceph/cluster/kustomization.yaml
@@ -5,7 +5,7 @@ resources:
   - configmap.sops.yaml
   - secret.sops.yaml
   - helm-release.yaml
-  - cluster-external.yaml
-  - storageclass.yaml
-  - volume-snapshot-class.yaml
+  # - cluster-external.yaml
+  # - storageclass.yaml
+  # - volume-snapshot-class.yaml
   # - cephfs.yaml
