debug: external ceph cluster troubles

--- a/cluster/core/rook-ceph/cluster/cluster-external.yaml
+++ b/cluster/core/rook-ceph/cluster/cluster-external.yaml
@@ -9,6 +9,8 @@ spec:
     enable: true
   crashCollector:
     disable: true
+  cephVersion:
+    image: quay.io/ceph/ceph:v16.2.7
   healthCheck:
     daemonHealth:
       mon:
