--- a/cluster/core/rook-ceph/cluster/helm-release.yaml
+++ b/cluster/core/rook-ceph/cluster/helm-release.yaml
@@ -38,3 +38,25 @@ spec:
         tls:
           - hosts:
               - *host
+    cephClusterSpec:
+      external:
+        enable: true
+      crashCollector:
+        disable: true
+      cephVersion:
+        image: quay.io/ceph/ceph:v16.2.7
+      healthCheck:
+        daemonHealth:
+          mon:
+            disabled: false
+            interval: 45s
+      # optionally, the ceph-mgr IP address can be passed to gather metric from the prometheus exporter
+      monitoring:
+        enabled: true
+        rulesNamespace: rook-ceph
+        externalMgrEndpoints:
+          - ip: "10.1.5.201"
+          - ip: "10.1.5.202"
+          - ip: "10.1.5.203"
+          - ip: "10.1.5.204"
+        externalMgrPrometheusPort: 9283
