--- a/cluster/core/rook-ceph/cluster/helm-release.yaml
+++ b/cluster/core/rook-ceph/cluster/helm-release.yaml
@@ -45,6 +45,7 @@ spec:
         disable: true
       cephVersion:
         image: quay.io/ceph/ceph:v16.2.7
+      dataDirHostPath: /var/lib/rook
       healthCheck:
         daemonHealth:
           mon:
