debug: external ceph cluster troubles

--- a/cluster/core/rook-ceph/cluster/helm-release.yaml
+++ b/cluster/core/rook-ceph/cluster/helm-release.yaml
@@ -44,7 +44,7 @@ spec:
       crashCollector:
         disable: true
       cephVersion:
-        image: quay.io/ceph/ceph:v16.2.7
+        image: v16.2.7
       dataDirHostPath: /var/lib/rook
       healthCheck:
         daemonHealth:
