--- a/cluster/core/rook-ceph/cluster/cluster-external.yaml
+++ b/cluster/core/rook-ceph/cluster/cluster-external.yaml
@@ -9,8 +9,8 @@ spec:
     enable: true
   crashCollector:
     disable: true
-  cephVersion:
-    image: quay.io/ceph/ceph:v16.2.7
+  # cephVersion:
+  #   image: quay.io/ceph/ceph:v16.2.7
   healthCheck:
     daemonHealth:
       mon:
