--- a/cluster/crds/rook-ceph/crds.yaml
+++ b/cluster/crds/rook-ceph/crds.yaml
@@ -15,7 +15,6 @@ spec:
     /*
     # include deploy crds dir
     !/deploy/examples/crds.yaml
-    !/deploy/examples/common.yaml
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
@@ -24,7 +23,7 @@ metadata:
   namespace: flux-system
 spec:
   interval: 15m
-  prune: false
+  prune: true
   wait: true
   sourceRef:
     kind: GitRepository
