--- a/cluster/core/rook-ceph/cluster/kustomization.yaml
+++ b/cluster/core/rook-ceph/cluster/kustomization.yaml
@@ -5,7 +5,7 @@ resources:
   - configmap.sops.yaml
   - secret.sops.yaml
   - cluster-external.yaml
-  - helm-release.yaml
+  # - helm-release.yaml
   # - storageclass.yaml
   - volume-snapshot-class.yaml
   # - cephfs.yaml
