debug: external ceph cluster troubles

--- a/cluster/core/rook-ceph/operator/cluster-external.yaml
+++ b/cluster/core/rook-ceph/operator/cluster-external.yaml
@@ -10,8 +10,8 @@ spec:
   crashCollector:
     disable: true
   # dataDirHostPath: /var/lib/rook
-  # cephVersion:
-  #   image: quay.io/ceph/ceph:v16.2.7
+  cephVersion:
+    image: quay.io/ceph/ceph:v16.2.7
   healthCheck:
     daemonHealth:
       mon:
