--- a/cluster/apps/kustomization.yaml
+++ b/cluster/apps/kustomization.yaml
@@ -4,7 +4,7 @@ kind: Kustomization
 resources:
   - calico-system
   - cert-manager
-  # - flux-system
+  - flux-system
   # - home
   # # - kasten-io
   # - kube-system
