--- a/cluster/apps/kustomization.yaml
+++ b/cluster/apps/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
   - flux-system
   # - home
   # # - kasten-io
-  # - kube-system
+  - kube-system
   # - media
   # - monitoring
   # - networking
